Add missing stub for XMISCMD

--- a/dos33.html
+++ b/dos33.html
@@ -655,7 +655,6 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 <pre>
 
 ; === <b class="file">DOS33C</b> - Master Source File, Page <a class="page" name="page39">39</a> ===
-
                     001             SBTL "DOS3.3C w/APPEND fix, U/L case"
                     002             LST  ON,VSYM
                     003             MSB  OFF
@@ -1237,7 +1236,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     226 
 
 
-<hr>; === <a class="file" name="DOSHOOK">DOSHOOK</a> - Input / Output Vector, Page <a class="page" name="page44">44</a>,  <b class="ts">T0SD</b> .. , $<span class="adr">9E81</span> - $<span class="adr">????</span> ===<hr>
+<hr>; === <a class="file" name="DOSHOOK">DOSHOOK</a> - Input / Output Vector, Page <a class="page" name="page44">44</a>, <b class="ts">T0SD</b> .. , $<span class="adr">9E81</span> - $<span class="adr">????</span> ===<hr>
                     001             PAGE
                     002 ;
                     003 ;CHRIN - CHAR RCVD VIA IN SWITCH
@@ -1456,7 +1455,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     215 
 
 
-<hr>; === <a class="file" name="CMDSCAN">CMDSCAN</a> - Scan for commands, Page <a class="page" page="page16">16</a>,  <b class="ts">T?S?</b>, $<span class="adr">????</span> ===<hr>
+<hr>; === <a class="file" name="CMDSCAN">CMDSCAN</a> - Scan for commands, Page <a class="page" page="page16">16</a>, <b class="ts">T?S?</b>, $<span class="adr">????</span> ===<hr>
                     001             PAGE
                     002 ;
                     003 ; SCNCMD - SCAN A COMMAND
@@ -2022,7 +2021,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     290 
 
 
-<hr>; === <a class="file" name="XLODSAV">XLODSAV</a> - Execute Load / Save , Page <a class="page" name="page140">140</a>,  <b class="ts">T?S?</b>, $<span class="adr">????</span> ===<hr>
+<hr>; === <a class="file" name="XLODSAV">XLODSAV</a> - Execute Load / Save, Page <a class="page" name="page140">140</a>, <b class="ts">T?S?</b>, $<span class="adr">????</span> ===<hr>
                     001 
                     002 
                     003 
@@ -2292,6 +2291,263 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     267 
                     268 
                     269 
+
+
+<hr>; === <a class="file" name="XMISCMD">XMISCMD</a> - Execute misc. commands, Page <a class="page" name="page145">145</a>, <b class="ts">T?S?</b>, $<span class="adr">????</span> ===<hr>
+                    001 
+                    002 
+                    003 
+                    004 
+                    005 
+                    006 
+                    007 
+                    008 
+                    009 
+                    010 
+                    011 
+                    012 
+                    013 
+                    014 
+                    015 
+                    016 
+                    017 
+                    018 
+                    019 
+                    020 
+                    021 
+                    022 
+                    023 
+                    024 
+                    025 
+                    026 
+                    027 
+                    028 
+                    029 
+                    030 
+                    031 
+                    032 
+                    033 
+                    034 
+                    035 
+                    036 
+                    037 
+                    038 
+                    039 
+                    040 
+                    041 
+                    042 
+                    043 
+                    044 
+                    045 
+                    046 
+                    047 
+                    048 
+                    049 
+                    050 
+                    051 
+                    052 
+                    053 
+                    054 
+                    055 
+                    056 
+                    057 
+                    058 
+                    059 
+                    060 
+                    061 
+                    062 
+                    063 
+                    064 
+                    065 
+                    066 
+                    067 
+                    068 
+                    069 
+                    070 
+                    071 
+                    072 
+                    073 
+                    074 
+                    075 
+                    076 
+                    077 
+                    078 
+                    079 
+                    080 
+                    081 
+                    082 
+                    083 
+                    084 
+                    085 
+                    086 
+                    087 
+                    088 
+                    089 
+                    090 
+                    091 
+                    092 
+                    093 
+                    094 
+                    095 
+                    096 
+                    097 
+                    098 
+                    099 
+                    100 
+                    101 
+                    102 
+                    103 
+                    104 
+                    105 
+                    106 
+                    107 
+                    108 
+                    109 
+                    110 
+                    111 
+                    112 
+                    113 
+                    114 
+                    115 
+                    116 
+                    117 
+                    118 
+                    119 
+                    120 
+                    121 
+                    122 
+                    123 
+                    124 
+                    125 
+                    126 
+                    127 
+                    128 
+                    129 
+                    130 
+                    131 
+                    132 
+                    133 
+                    134 
+                    135 
+                    136 
+                    137 
+                    138 
+                    139 
+                    140 
+                    141 
+                    142 
+                    143 
+                    144 
+                    145 
+                    146 
+                    147 
+                    148 
+                    149 
+                    150 
+                    151 
+                    152 
+                    153 
+                    154 
+                    155 
+                    156 
+                    157 
+                    158 
+                    159 
+                    160 
+                    161 
+                    162 
+                    163 
+                    164 
+                    165 
+                    166 
+                    167 
+                    168 
+                    169 
+                    170 
+                    171 
+                    172 
+                    173 
+                    174 
+                    175 
+                    176 
+                    177 
+                    178 
+                    179 
+                    180 
+                    181 
+                    182 
+                    183 
+                    184 
+                    185 
+                    186 
+                    187 
+                    188 
+                    189 
+                    190 
+                    191 
+                    192 
+                    193 
+                    194 
+                    195 
+                    196 
+                    197 
+                    198 
+                    199 
+                    200 
+                    201 
+                    202 
+                    203 
+                    204 
+                    205 
+                    206 
+                    207 
+                    208 
+                    209 
+                    210 
+                    211 
+                    212 
+                    213 
+                    214 
+                    215 
+                    216 
+                    217 
+                    218 
+                    219 
+                    220 
+                    221 
+                    222 
+                    223 
+                    224 
+                    225 
+                    226 
+                    227 
+                    228 
+                    229 
+                    230 
+                    231 
+                    232 
+                    233 
+                    234 
+                    235 
+                    236 
+                    237 
+                    238 
+                    239 
+                    240 
+                    241 
+                    242 
+                    243 
+                    244 
+                    245 
+                    246 
+                    247 
+                    248 
+                    249 
+                    250 
+                    251 
+                    252 
+                    253 
+                    254 
 
 
 <hr>; === <a class="file" name="DOSGOER">DOSGOER</a> - Print Error message, Page <a class="page" name="page40">40</a>, T?S?, $<span class="adr">????</span> ===<hr>
@@ -4970,7 +5226,6 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 
 
 <hr>; === <a class="file" name="COREQUS">COREQUS</a> - Core Equates, Page <a class="page" name="page24">24</a>, <b class="ts">n/a</b>, $<span class="adr">n/a</span> ===<hr>
-
                     001 
                     002 
                     003 
