Added acronym HNTDAFS

--- a/dos33.html
+++ b/dos33.html
@@ -78,7 +78,7 @@ Misc.
  - can't use '$' in css name *
  - http://stackoverflow.com/questions/448981/which-characters-are-valid-in-css-class-names-selectors 
 */
-a.dumb { /* How Not To Design a File System */
+a.dumb { /* How Not To Design a File System (HNTDAFS) */
     color: #808; /* purple */
 }
 a.file {
