--- a/dos33.html
+++ b/dos33.html
@@ -4191,31 +4191,31 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     019 <a class="d" name="VML"   >VML         </a>EQU *-<a class="v" href="#VOLMES">VOLMES</a>-1                                  ; File <a class="file" href="#FDELCAT">FDELCAT</a>, Func <a class="x" href="#RDIR">RDIR</a>, Line <span class="todo">TODO</span>
                     020             PAGE
                     021 ;VTOC RECORD AREA                                           ; === VTOC ===
-                    022 <a class="d" name="VTOC"  >VTOC        </a>EQU *                                           ; T11S0 === Normal snarky commentary ===
-33BB:04             023 <a class="d" name="VDOST" >VDOST       </a>DFB 4           ; DOS TYPE                      ; 00:04 *sarcasm* If only we could do FILESYSTEM_TYPE_VTOC = $4
-33BC:11             024 <a class="d" name="VDIRTK">VDIRTK      </a>DFB 17          ; COLUME DIRECTORY SECTOR       ; 01:11 1) *spelling* VOLUME *sigh* 2) TRACK not sector
-33BD:0F             025 <a class="d" name="VDIRSC">VDIRSC      </a>DFB 15          ; VOLUME DIRECTORY SECTOR       ; 02:0F 
-33BE:04             026 <a class="d" name="VDOSRN">VDOSRN      </a>DFB 4           ; DOS RELEASE NUMBER            ; 03:03 *sarcasm* I guess <b>VERSION</b> made too much sense.
-33BF:00             027             DFB 0           ; SPARE                         ; 04:01 *sarcasm* Because <i>someday</i> these <i>might</i> be used ...
-33C0:00             028             DFB 0           ; SPARE                         ; 05:00 
-33C1:FE             029 <a class="d" name="VVOLNO">VVOLNO      </a>DFB $FE         ; VOLUME NUMBER                 ; 06:FE 
-33C2:0 0 0 0 0 0    030             DS 32           ; SPARE                         ; 07:00 Gee, here's an idea, instead of wasting space in the VTOC:
+                    022 <a class="d" name="VTOC"  >VTOC        </a>EQU *                                           ; <b class="ts">T11S0</b> [offset], Right = normal snarky commentary
+33BB:04             023 <a class="d" name="VDOST" >VDOST       </a>DFB 4     ; 00:04 DOS TYPE                      ; [00] *sigh* magic number: /sarcasm If only FILESYSTEM_TYPE_VTOC = $4
+33BC:11             024 <a class="d" name="VDIRTK">VDIRTK      </a>DFB 17    ; 01:11 COLUME DIRECTORY SECTOR       ; [01] *spelling* VOLUME, *sigh* <i>TRACK</i> not sector
+33BD:0F             025 <a class="d" name="VDIRSC">VDIRSC      </a>DFB 15    ; 02:0F VOLUME DIRECTORY SECTOR       ; [02]
+33BE:04             026 <a class="d" name="VDOSRN">VDOSRN      </a>DFB 4     ; 03:04 DOS RELEASE NUMBER            ; [03] *sarcasm* I guess <b>VERSION</b> made too much sense.
+33BF:00             027             DFB 0           ; SPARE                         ; [04] *sarcasm* Because <i>someday</i> these <i>might</i> be used ...
+33C0:00             028             DFB 0           ; SPARE                         ; [05]
+33C1:FE             029 <a class="d" name="VVOLNO">VVOLNO      </a>DFB $FE         ; VOLUME NUMBER                 ; [06]
+33C2:0 0 0 0 0 0    030             DS 32           ; SPARE                         ; [07] Gee, here's an idea, instead of wasting space in the VTOC:
 33C8:0 0 0 0 0 0 0 0                                                                ;       1) Pack our data by removing all unused crap,
 33D0:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ;       2) Put VTOC data as first XX bytes in the CATALOG <b class="ts">T11$F</b>
 33E0:00 00                                                                          ;       If we were <i>really</i> smart <b class="ts">T11</b> would reside on <b class="ts">T2$5..F</b>
-33E2:7A             031 <a class="d" name="VTDMS" >VTDMS       </a>DFB 122         ; MAX SECTORS IN A FILE DIR     ; 27:7A *sigh* not 128 so we can BMI (Branch on Minus) ???
-33E3:00 00 00 00    032 <a class="d" name="VSPARE">VSPARE      </a>DS 8            ; SPARES                        ; 28:00 *sarcasm* Who cares, we have 140KB, right!
+33E2:7A             031 <a class="d" name="VTDMS" >VTDMS       </a>DFB 122         ; MAX SECTORS IN A FILE DIR     ; [27] *sigh* not 128 so we can BMI (Branch on Minus) ???
+33E3:00 00 00 00    032 <a class="d" name="VSPARE">VSPARE      </a>DS 8            ; SPARES                        ; [28] *sarcasm* Who cares, we have 140KB, right!
 33E7:00 00 00 00    033 ;
-33EB:11             034 <a class="d" name="VALCA1">VALCA1      </a>DFB 17          ; ALOCATION ALGORITHM BYTE 1    ; 30:0D Last allocated track <span class="todo">TODO</span> Cross-Ref
-33EC:01             035 <a class="d" name="VALCA2">VALCA2      </a>DFB 1           ; AA BYTE2                      ; 31:FF Direction of last tack allocation --  <span class="todo">TODO</span> Cross-Ref
+33EB:11             034 <a class="d" name="VALCA1">VALCA1      </a>DFB 17          ; ALOCATION ALGORITHM BYTE 1    ; [30] Last allocated track <span class="todo">TODO</span> Cross-Ref
+33EC:01             035 <a class="d" name="VALCA2">VALCA2      </a>DFB 1           ; AA BYTE2                      ; [31] Direction of last tack allocation --  <span class="todo">TODO</span> Cross-Ref
                                                                                     ;           +$01 inwards  to <span class="ts">T22</span>,
                                                                                     ;           -$FF outwards to <span class="ts">T00</span>.
-33ED:00             036 <a class="d" name="VALCA3">VALCA3      </a>DFB 0           ; AA BYTE3                      ; 32:00 *wastes* 1 byte *sarcasm* <i>I _really_ don't know what we</i>
-33EE:00             037 <a class="d" name="VALCA4">VALCA4      </a>DFB 0           ; AA BYTE4                      ; 33:00 *wastes* 1 byte   <i>would do without you Captain Obvious!</i>
-33EF:23             038 <a class="d" name="VNOTRK">VNOTRK      </a>DFB 35          ; NO TRACKS ON VOL              ; 34:23 *note* "No" = Number
-33F0:10             039 <a class="d" name="VNOSEC">VNOSEC      </a>DFB 16          ; NO SECTORS PER TRACK          ; 35:10          Evidence that one day DOS 3.4+ might support:
-33F1:00 01          040 <a class="d" name="VSECLN">VSECLN      </a>DW 256          ; NO. BYTES PER SECTOR          ; 36:00 (Little)     &gt;  16 sectors/track
-                    041 ;                                                           ; 37:01 (Endian) and &gt; 256 bytes/sector.
+33ED:00             036 <a class="d" name="VALCA3">VALCA3      </a>DFB 0           ; AA BYTE3                      ; [32] *wastes* 1 byte *sarcasm* <i>I _really_ don't know what we</i>
+33EE:00             037 <a class="d" name="VALCA4">VALCA4      </a>DFB 0           ; AA BYTE4                      ; [33] *wastes* 1 byte   <i>would do without you Captain Obvious!</i>
+33EF:23             038 <a class="d" name="VNOTRK">VNOTRK      </a>DFB 35          ; NO TRACKS ON VOL              ; [34] *note* "No" = Number
+33F0:10             039 <a class="d" name="VNOSEC">VNOSEC      </a>DFB 16          ; NO SECTORS PER TRACK          ; [35]          Evidence that one day DOS 3.4+ might support:
+33F1:00 01          040 <a class="d" name="VSECLN">VSECLN      </a>DW 256          ; NO. BYTES PER SECTOR          ; [36] (Little)     &gt;  16 sectors/track
+                    041 ;                                                           ; [37] (Endian) and &gt; 256 bytes/sector.
                     042 <a class="d" name="VSECAL">VSECAL      </a>EQU *                                           ;       *note* <b>Actual</b> VTOC header is $F3-$BB = $38 bytes
                     043 ;SECTORS ALLOCATED BY BIT MAP                               ;       [0] Sectors: FEDCBA98    0=Used
                     044 ;4 BYTES OF BITS PER TRACK                                  ;       [1] Sectors: 76543210    1=Free
@@ -4224,11 +4224,11 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     047 ;                                                           ;       As Mike Acton says:
                     048 ;                                                           ;           "<i>Solve the <b>actual</b> problem,</i>
                     049            PAGE                                             ;           <i>not the one you <b>think</b> is the problem</i>"
-33F2:0 0 0 0 0 0    050            ORG VTOC+256                                     ; 38:0F *hack* uninitialized memory is never a good idea
-33F8:0 0 0 0 0 0 0 0                                                                ; 39:00 Why not simply <span class="macro">DS 256-&gt;VSECAL,0</span> ???
-3400:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; 3A:00 === <b class="ts">T2$3</b> ===
-3410:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; 3B:FF *sigh* let's waste $C4 bytes as we span 2 sectors
-3420:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; 3C:FF instead of copying the VTOC header ($38 byte)
+33F2:0 0 0 0 0 0    050            ORG VTOC+256                                     ; [38] *hack* uninitialized memory is never a good idea
+33F8:0 0 0 0 0 0 0 0                                                                ; [39] Why not simply <span class="macro">DS 256-&gt;VSECAL,0</span> ???
+3400:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; [3A] === <b class="ts">T2$3</b> === *wastes* <b>entire</b> sector for <i>1 byte</i>!?  *<a class="dumb" href="http://i.imgur.com/iWKad22.jpg">facepalm</a>*
+3410:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; [3B] *sigh* let's waste $C4 bytes as we span 2 sectors
+3420:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; [3C] instead of copying the VTOC header ($38 byte)
 3430:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ;       into a new temporary page on init!
 3440:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
 3450:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; <a class="dumb" name="HNTDAFS3">HNTDAFS #3</a>
@@ -4237,34 +4237,50 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 3480:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; See File <a class="file" href="#FLOCSEC">FLOCSEC</a>, Func <a class="x" href="#GETSEC">GETSEC</a>, Line <span class="todo">TODO</span>
 3490:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
 34A0:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
-34B0:0 0 0 0 0      051 ;
-34B4:0 0 0 0 0      052 ;VOLUME DIRECTORY AREA                                      ; === CATALOG ===
-34B8:0 0 0          053 ;
-<hr>                    054 VOLDIR      EQU *           ;                               ; === Page <a class="page" name="page87">87</a> ===
-34BB:02             055 VDTCDE      DFB 2           ; VOLUME DIRECTORY TYPE CODE    ; *sarcasm* if only we could do FILESYSTEM_TYPE_CATALOG = $2
-                    056 
-                    057 
-                    058 
-                    059 
-                    060 
-                    061 
-                    062 
-                    063 
-                    064 
-                    065 
-                    066 
-                    067 
-                    068 
-                    069 
-                    070 
-                    071 
-                    072 
-                    073 
-                    074 
-                    075 
-                    076 
-                    077 
-                    078 
+34B0:0 0 0 0        051 ;
+34B4:0 0 0 0        052 ;VOLUME DIRECTORY AREA                                      ; === CATALOG ===
+34B8:0 0 0          053 ;                                                           ; <b class="ts">T11SF</b>
+<hr>                    054 <a class="d" name="VOLDIR"   >VOLDIR      </a>EQU *           ;                               ; === Page <a class="page" name="page87">87</a> ===
+34BB:02             055 <a class="d" name="VDTCDE"   >VDTCDE      </a>DFB 2           ; VOLUME DIRECTORY TYPE CODE    ; [00] *sigh* magic number: /sarcasm If only FILESYSTEM_TYPE_CATALOG = $2
+                    056 <a class="d" name="VDLTRK"   >VDLTRK      </a>DS 1            ; VD LINK TRACK                 ; [01]
+                    057 <a class="d" name="VDLSEC"   >VDLSEC      </a>DS 1            ; VD LINK SECTOR                ; [02]
+                    058 <a class="d" name="VDNF"     >VDNF        </a>DS 1            ; VD NUMBER FILES THIS SECTOR   ; [03]
+                    059 <a class="d" name="VDSPAR"   >VDSPAR      </a>DS 7            ; SPARES                        ; [04] *wastes* 7 bytes
+                    060 ;                                                           ;      /sarcasm Glad to see this was put to good use ... NOT
+                    061 <a class="d" name="VDFILE"   >VDFILE      </a>EQU *           ; FILE ALLOCATION AREA (7 FILES); [0B] NO, this is the _not_ the allocation; this is the *meta* data
+                    062 ;EACH FILE:                                                 ; *note* indented "struct" for readability
+                    063 ;  FILE DIR TRK                                             ;     uint8_t  track
+                    064 ;  FILE DIR SECTOR                                          ;     uint8_t  sector
+                    065 ;  FILE USE CODE                                            ;     uint8_t  type
+                    066 ;  FILE NAME         (30)                                   ;     char     name[30]
+                    067 ;  FILE SECTOR COUNT (2)                                    ;     uint16_t num_sectors
+34BC:00 00 00 00    068             ORG VOLDIR+256                                  ; *wastes* 256 bytes *<a href="https://c1.staticflickr.com/3/2536/3904932487_54cce78f13.jpg">double facepalm</a>* &#x0CA0;_&#x0CA0; Oh FFS already ...
+34C0:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
+34D0:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
+34E0:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
+34F0:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
+3500:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; === <b class="ts">T?S?</b> ===
+3510:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
+3520:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
+3530:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
+3540:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
+3550:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
+3560:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
+3570:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
+3580:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
+3590:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
+35A0:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
+35B0:00 00 00 00
+35B4:00 00 00 00    069 VDEND       EQU *
+35B8:00 00 00       070 VDLEN       EQU *-VOLDIR
+                    071 VDFLEN      EQU *-VDFIL
+                    072 ;
+                    073             PAGE
+                    074 ;
+                    075 ;COMMAND CONTROL BLOCK (CCB)
+                    076 ;
+                    077 CCB         EQU *
+35BB:00             078 CCBREQ      DS 1        ; USER REQUEST BYTE
                     079 
                     080 
                     081 
@@ -4384,6 +4400,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     185 ;
                     186 <a class="d" name="DCBLEN"     >DCBLEN      </a>EQU *-<a class="v" href="#FCBDCB">FCBDCB</a>    ; DCB LENGTH
                     <a class="line" name="fvcbufs_187">187</a> <a class="d" name="FCBLEN"     >FCBLEN      </a>EQU *-<a class="v" href="#FCB"   >FCB</a>       ; FCB LENGTH
+
 
 <hr>; === <a class="file" name="BOOTLDR">BOOTLDR</a> - Boot loader, Page <a class="page" name="page8">8</a>, <b class="ts">T0$0</b>, $<span class="adr">B600</span> - $<span class="adr">Bxxx</span> ===<hr>
                     001             SBTL '16-SECTOR DOS BOOT'
