Fix spelling sarcasm

--- a/dos33.html
+++ b/dos33.html
@@ -4185,7 +4185,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                                                                                     ;    D = Directory (child)
                                                                                     ; Yeah, yeah 20/20
 33AF:A0 C5 CD D5    017 <a class="d" name="VOLMES">VOLMES      </a>ASC " EMULOV DISK" ; "DISK VOLUME " BACWARDS    ; *sigh* Micro-optimization
-33B3:CC CF D6 A0                                                                    ; Not that these are bad but /sarcmasm <i>Lets focus on</i>
+33B3:CC CF D6 A0                                                                    ; Not that these are bad but /sarcasm <i>Lets focus on</i>
 33B7:CB D3 C9 C4                                                                    ; <i>a <b>single</b> tree, and completely miss the forest!</i>
                     018             MSB OFF                                         ; Switch back to 7-bit ASCII
                     019 <a class="d" name="VML"   >VML         </a>EQU *-<a class="v" href="#VOLMES">VOLMES</a>-1                                  ; File <a class="file" href="#FDELCAT">FDELCAT</a>, Func <a class="x" href="#RDIR">RDIR</a>, Line <span class="todo">TODO</span>
