--- a/dos33.html
+++ b/dos33.html
@@ -4221,14 +4221,34 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     044 ;4 BYTES OF BITS PER TRACK                                  ;       [1] Sectors: 76543210    1=Free
                     045 ;LEFT MOST BIT REPRESENTS SECTOR N                          ;*sigh* Let us <b>waste</b>     : 35*4 bytes = 140 bytes ($8C)
                     046 ;WHERE N=NO SECTORS PER TRACK                               ;       When we only <b>need</b>: 35*2 bytes =  70 bytes ($46)
-                    047 ;                                                           ;       As Mike Acton says:
-                    048 ;                                                           ;           "<i>Solve the <b>actual</b> problem,</i>
-                    049            PAGE                                             ;           <i>not the one you <b>think</b> is the problem</i>"
-33F3:0 0 0 0 0 0    050            ORG VTOC+256                                     ; [38] *hack* uninitialized memory is never a good idea
-33F8:0 0 0 0 0 0 0 0                                                                ; [39] Why not simply <span class="macro">DS 256-&gt;VSECAL,0</span> ???
-3400:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; [3A] === <b class="ts">T2$3</b> === *wastes* <b>entire</b> sector for <i>1 byte</i>!?  *<a class="dumb" href="http://i.imgur.com/iWKad22.jpg">facepalm</a>*
-3410:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; [3B] *sigh* let's waste $C4 bytes as we span 2 sectors
-3420:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; [3C] instead of copying the VTOC header ($38 byte)
+                    047 ;                                                           ;As Mike Acton says: "<i>Solve the <b>actual</b> problem,</i>
+                    048 ;                                                           ;                     <i>NOT the one you <b>think</b> you have.</i>"
+                    049            PAGE                                             ;<span class="adr">B3F3</span> =T00
+33F3:00 00 00 00    050            ORG VTOC+256                                     ; [38]=T00 *hack* uninitialized memory is never a good idea
+33F7:00 00 00 00                                                                    ; [3C]=T01
+33FB:00 00 00 00                                                                    ; [40]=T02 Why not simply <span class="macro">DS 256-&gt;VSECAL,0</span> ???
+33FF:00 00 00 00                                                                    ; [44]=T03 === <b class="ts">T2$3</b> === 
+3403:00 00 00 00                                                                    ; [48]=T03 *<a class="dumb" name="fvcbufs_3400">wastes</a>* an <b>entire</b> sector for <i>1 bloody byte</i>!?
+3407:00 00 00 00                                                                    ; [4C]=T04   *<a class="dumb" href="http://i.imgur.com/iWKad22.jpg">facepalm</a>*
+340B:00 00 00 00                                                                    ; [50]=T05
+340F:00 00 00 00                                                                    ; [54]=T06
+3413:00 00 00 00                                                                    ; [58]=T07
+3417:00 00 00 00                                                                    ; [5C]=T08
+341B:00 00 00 00                                                                    ; [60]=T09
+341F:00 00 00 00                                                                    ; [64]=T0A
+3423:00 00 00 00                                                                    ; [68]=T0B
+3427:00 00 00 00                                                                    ; [6C]=T0C
+342B:00 00 00 00                                                                    ; [70]=T0D
+342F:00 00 00 00                                                                    ; [74]=T0E
+3433:00 00 00 00                                                                    ; [78]=T0F
+3437:00 00 00 00                                                                    ; [7C]=T10
+343B:00 00 00 00                                                                    ; [80]=T11
+343F:00 00 00 00                                                                    ; [84]=T12
+3443:00 00 00 00                                                                    ; [88]=T13
+3447:00 00 00 00                                                                    ; [8C]=T14
+
+3410:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; *sigh* let's waste $C4 bytes as we span 2 sectors
+3420:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; instead of copying the VTOC header ($38 byte)
 3430:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ;       into a new temporary page on init!
 3440:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
 3450:0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0                                                ; <a class="dumb" name="HNTDAFS3">HNTDAFS #3</a>
